--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1.0</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -25,7 +25,7 @@
 		<validation-api-version>1.1.0.Final</validation-api-version>
 		<spring-data-elasticsearch-version>1.1.0.RELEASE</spring-data-elasticsearch-version>
 
-		<utils-version>0.0.1-SNAPSHOT</utils-version>
+		<utils-version>0.1.0</utils-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
