--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.aggrepoint.framework</groupId>
 	<artifactId>aggregator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>AggrePoint Framework Aggregator</name>
@@ -14,4 +14,10 @@
 		<module>dao</module>
 		<module>winlet</module>
 	</modules>
+
+		<scm>
+			<url>https://github.com/yangjm/winlet</url>
+			<connection>scm:git:git://github.com/yangjm/winlet.git</connection>
+			<developerConnection>scm:git:git@github.com:yangjm/winlet.git</developerConnection>
+		</scm>
 </project>
