update pom.xml for releasing to Maven Central

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -11,6 +11,7 @@
 
 	<artifactId>apdao</artifactId>
 	<name>AggrePoint Framework - DAO</name>
+	<description>Data Access Object layer utilities</description>
 
 	<build>
 		<finalName>apdao</finalName>
