--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -11,6 +11,7 @@
 
 	<artifactId>aputils</artifactId>
 	<name>AggrePoint Framework - Utils</name>
+	<description>Common utilities used by both Dao and Winlet project</description>
 
 	<build>
 		<finalName>aputils</finalName>
