--- a/winlet/pom.xml
+++ b/winlet/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>0.1.4-SNAPSHOT</version>
+		<version>0.1.4</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -21,7 +21,7 @@
 		<org.owasp.esapi-version>2.1.0</org.owasp.esapi-version>
 		<elasticsearch-version>1.4.2</elasticsearch-version>
 
-		<dao-version>0.1.4-SNAPSHOT</dao-version>
+		<dao-version>0.1.4</dao-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
