--- a/winlet/pom.xml
+++ b/winlet/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>0.1.5</version>
+		<version>0.1.6-SNAPSHOT</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -22,7 +22,7 @@
 		<elasticsearch-version>1.4.2</elasticsearch-version>
 		<jackson-version>2.4.2</jackson-version>
 
-		<dao-version>0.1.5</dao-version>
+		<dao-version>0.1.6-SNAPSHOT</dao-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
