--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -91,5 +91,12 @@
 			<version>${spring-data-elasticsearch-version}</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>1.2.5.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
