--- a/winlet/pom.xml
+++ b/winlet/pom.xml
@@ -21,6 +21,8 @@
 		<org.owasp.esapi-version>2.1.0</org.owasp.esapi-version>
 		<elasticsearch-version>1.4.2</elasticsearch-version>
 		<jackson-version>2.4.2</jackson-version>
+		<htmlcompressor-version>1.5.2</htmlcompressor-version>
+		<yuicompressor-version>2.4.8</yuicompressor-version>
 
 		<dao-version>0.1.6-SNAPSHOT</dao-version>
 
@@ -82,6 +84,24 @@
 			<artifactId>jackson-databind</artifactId>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<version>${jackson-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.htmlcompressor</groupId>
+			<artifactId>htmlcompressor</artifactId>
+			<version>${htmlcompressor-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.yahoo.platform.yui</groupId>
+			<artifactId>yuicompressor</artifactId>
+			<version>${yuicompressor-version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>js</artifactId>
+					<groupId>rhino</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
