--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.aggrepoint.framework</groupId>
 	<artifactId>aggregator</artifactId>
-	<version>0.1.10-SNAPSHOT</version>
+	<version>0.1.10</version>
 	<packaging>pom</packaging>
 
 	<name>AggrePoint Framework Aggregator</name>
