--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>0.1.17-SNAPSHOT</version>
+		<version>0.1.17</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -19,7 +19,7 @@
 		<commons-beanutils-version>1.9.2</commons-beanutils-version>
 		<validation-api-version>1.1.0.Final</validation-api-version>
 
-		<utils-version>0.1.17-SNAPSHOT</utils-version>
+		<utils-version>0.1.17</utils-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.18.2-GA</version>
+			<version>3.21.0-GA</version>
 		</dependency>
 
 		<dependency>
