--- a/winlet/pom.xml
+++ b/winlet/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>0.5.2-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
@@ -21,9 +21,9 @@
 		<org.owasp.esapi-version>2.1.0</org.owasp.esapi-version>
 		<htmlcompressor-version>1.5.2</htmlcompressor-version>
 		<yuicompressor-version>2.4.8</yuicompressor-version>
-		<freemarker-version>2.3.20</freemarker-version>
+		<freemarker-version>2.3.28</freemarker-version>
 
-		<dao-version>0.5.2-SNAPSHOT</dao-version>
+		<dao-version>1.0.0</dao-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
