--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.aggrepoint.framework</groupId>
 		<artifactId>pom-parent</artifactId>
-		<version>1.0.11</version>
+		<version>1.0.12-SNAPSHOT</version>
 		<relativePath>../pom_parent.xml</relativePath>
 	</parent>
 
